# subpay-mvp

./: .gitignore  Dockerfile  ECOSYSTEM.md  RAILWAY.md  README.md  nixpacks.toml  pnpm-lock.yaml  railway.json  wrangler.jsonc
.agents/memory/: MEMORY.md  subpay-project.md
.migration-backup/: .replit  README.md
.migration-backup/frontend/: index.html  tsconfig.json  vite.config.ts
.migration-backup/frontend/src/: App.tsx  config.ts  main.tsx
.migration-backup/frontend/src/components/: SubscriptionList.tsx
.migration-backup/programs/subpay-core/src/: errors.rs  instructions.rs
.migration-backup/sdk/scripts/: test-devnet.ts
.migration-backup/sdk/src/: index.ts
artifacts/subpay/: index.html  nixpacks.toml  package.json  vite.config.ts
artifacts/subpay/.replit-artifact/: artifact.toml
artifacts/subpay/src/: App.tsx  index.css  main.tsx
artifacts/subpay/src/components/: CreateSubscription.tsx  StreamDashboard.tsx  StreamingForm.tsx  SubscriptionList.tsx  VestingForm.tsx
artifacts/subpay/src/sdk/: index.ts
frontend/: Caddyfile  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CreateSubscription.tsx  SubscriptionList.tsx
programs/subpay-core/: Cargo.toml
programs/subpay-core/src/: errors.rs  instructions.rs  lib.rs  state.rs
sdk/: package.json
sdk/scripts/: package-lock.json  package.json  test-devnet.ts
sdk/src/: index.ts
