[package]
name = "subpay-core"
version = "0.1.0"
edition = "2021"
description = "SubPay recurring payments program for Rialo SVM"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
borsh = { version = "1.5", features = ["derive"] }
rialo-s-program = "0.12.2"
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
opt-level = "z"
lto = true
debug = false
panic = "abort"
